pds/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: pds
    app.kubernetes.io/name: pds
  name: pds
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: pds
      app.kubernetes.io/name: pds
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: pds
        app.kubernetes.io/name: pds
    spec:
      containers:
        - image: ghcr.io/xjdao2025/pds:latest
          imagePullPolicy: IfNotPresent
          name: pds
          ports:
            - containerPort: ${PDS_PORT}
              name: http
              protocol: TCP
          resources: 
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext: 
            runAsUser: 0
            runAsGroup: 0
          volumeMounts:
            - mountPath: /pds
              name: pds
            - mountPath: /etc/localtime
              name: node-localtime
      volumes:
      - hostPath:
          path: /etc/localtime
        name: node-localtime
  volumeClaimTemplates:
    - metadata:
        name: pds
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: alicloud-disk-essd
        resources:
          requests:
            storage: 1Gi
